# FTPUploader

./: .gitignore  APPSTORE_BUILD_GUIDE.md  APPSTORE_SUBMISSION.md  APP_REVIEW_NOTES.md  APP_REVIEW_NOTES_SHORT.txt  APP_STORE_ENTITLEMENTS.md  APP_STORE_SETUP.md  BUILD_SCRIPTS.md  CLAUDE.md  CLOUD_FTP_PLAN.md  DISTRIBUTION_SETUP.md  ExportOptions.plist  FTPDownloader.storekit  FTPSender_App_Store.provisionprofile.provisionprofile  HelperTool.entitlements  LOG_COLLECTION_VIEW_PATCH.swift  MenuBarApp_Guide.md  NOTARIZATION_SETUP.md  Package.swift  README.md  RustFTP.entitlements  SALES_GUIDE.md  TODO.md  app-icon.icns  build.sh  build_appstore.sh  build_notarized.sh  check_resume_state.sh  check_stuck_files.swift  create_rust_ftp_app.sh  diagnose_sleep_wake.sh  exportOptionsAppStore.plist  launch_app.sh  monitor_network_changes.sh  monitor_sleep_wake.sh  rebuild_and_launch.sh  rebuild_and_test_sleep_wake.sh  render_iap_screenshot.swift  reset_trial.sh  result.json  (+7 more)
.build/index-build/: build.db  debug.yaml
RustFTP/: Cargo.toml  Info.plist  result.json  rust_ftp.h  status.json  test_config.json  test_config_loop.json  test_config_real.json
RustFTP/archive/: README.md  build.rs.deprecated  main.rs.backup
RustFTP/src/: db.rs  db.rs.backup  ftp_engine.rs  lib.rs
Sources/FTPDownloader/: AppFileManager.swift  BuildConfiguration.swift  ConfigurationStorage.swift  ContentView.swift  DemoModeManager.swift  FTPConfig.swift  FTPConfigurationView.swift  FTPDownloader.entitlements  FTPDownloaderApp.swift  FileSyncManager.swift  HelpView.swift  Info.plist  LogCollectionView.swift  (+9 more)
(+444 files in other folders)
