[package]
name = "rust_ftp"
version = "1.0.1"
edition = "2021"

# Build as static library (for Swift FFI)
[lib]
name = "rust_ftp"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
ftp = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
rayon = "1.8"
crossbeam = "0.8"
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ctrlc = "3.4"
lazy_static = "1.4"
rusqlite = { version = "0.32", features = ["bundled"] }
libc = "0.2"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
